--- a/src/App.css
+++ b/src/App.css
@@ -80,5 +80,14 @@ body{
 }
 
 .the-main-part{
-    background-color: blue;
+    margin: 40px;
+    margin-left:10px;
+    padding:10px;
+}
+
+.everything{
+    height:100%;
+    width:100%;
+    display: flex;
+    flex-direction: row;
 }
