--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html{
+*{
   box-sizing: border-box;
 }
 
@@ -6,6 +6,8 @@ body{
     background-color: white;
     height:100%;
     color:darkslategray;
+	margin: 0;
+	overflow-x: hidden;
 }
 
 .navbar{
@@ -13,7 +15,6 @@ body{
     color:darkslategray;
     height: 85vh;
     width:10vw;
-    margin: 40px;
     padding:10px;
     border-radius:20px;
     display: flex;
@@ -80,18 +81,21 @@ body{
 }
 
 .the-main-part{
-    margin: 40px;
-    margin-left:10px;
-    padding:10px;
+    margin:10px;
+    padding:20px;
+    height: 85vh;
+    width:80vw;
+    overflow:scroll;
 }
 
 .everything{
-    height:100%;
-    width:100%;
+    height:100vh;
+    width:100vw;
     display: flex;
     flex-direction: row;
+    overflow: hidden;
+    padding:40px; 
 }
-
 /*
 html{
   box-sizing: border-box;
