Add styles for transaction components and layout

--- a/src/Trans.css
+++ b/src/Trans.css
@@ -1,4 +1,147 @@
+body {
+  font-family: Arial, sans-serif;
+  
+  margin: 0;
+  padding: 20px;
 
+}
+
+.app {
+  width: 1200px;
+  margin: auto;
+  background-color:white;
+}
+
+.summary {
+  display: flex;
+  gap: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
+  justify-content: space-evenly;
+  height:10%;
+}
+
+.summary>div{
+  width:20%;
+  height:90%;
+}
+.summary>div:hover{
+  transform: translateY(-5px);
+}
+
+.card {
+
+  padding: 10px 15px;
+  border-radius: 15px;
+  color: #000;
+  font-weight: bold;
+  text-align: center;
+}
+
+.income { background-color: #38b2ac; }
+.spent { background-color: #d9879c; }
+.balance { background-color: #3498db; }
+.budget { background-color: #4739da; }
+
+.transactions {
+  background-color: #008080;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.transactions-header {
+  display: flex;
+  flex-direction:row;
+  grid-template-columns: 50px 80px 1fr 120px 120px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #000;
+  justify-content: space-between;
+}
+
+.start{
+  display:flex;
+  flex-direction: row;
+  margin-left:10px;
+  justify-self:left;
+  justify-content: space-evenly;
+}
+
+.start>span,.end>span{
+  margin:0 10px;
+}
+
+.end{
+  display:flex;
+  flex-direction: row;
+  justify-self: right;
+  justify-content: space-evenly;
+  margin-right:10px;
+}
+
+.transaction {
+  display: grid;
+  grid-template-columns: 50px 80px 1fr 120px 120px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  background-color: #20b2aa;
+  color: #000;
+  align-items: center;
+}
+
+.transaction.highlight {
+  background-color: #ad6f7a;
+}
+
+.transaction.highlight:hover {
+  background-color: #d79aa5;
+}
+
+.transaction:hover {
+  background-color: #37ced6;
+}
+.icon {
+  font-size: 20px;
+}
+
+.actions {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+}
+
+.actions button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.delete { background-color: #000; color: #fff; }
+.edit { background-color: #87cefa; color: #000; }
+.copy { background-color: #87cefa; color: #000; }
+.add { background-color: #87cefa; color: #000; }
+
+.transaction-scroll {
+  max-height: 250px;      
+  overflow-y: auto;
+  padding-right: 5px;
+  margin-bottom: 15px;
+}
+
+
+.transaction-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.transaction-scroll::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+}
+
+/*
 body {
   font-family: Arial, sans-serif;
   background-color:white;
