--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,30 @@
   box-sizing: border-box;
 }
 
+#root{
+    padding:0;
+    margin:0;
+}
 body{
     background-color: white;
-    height:100%;
+    height:100vh;
+    width:100vw;
     color:darkslategray;
 	margin: 0;
+    padding:10px;
 	overflow-x: hidden;
+}
+
+nav{
+    height:100%;
+    width:15%;
 }
 
 .navbar{
     background-color: #5cbdb9;
     color:darkslategray;
-    height: 85vh;
-    width:10vw;
+    height:100%;
+    width:100%;
     padding:10px;
     border-radius:20px;
     display: flex;
@@ -69,7 +80,7 @@ body{
     height:5%;
     width:90%;
     border-radius:10px;
-    margin:120% auto 5px auto;
+    margin:120% auto 0 auto;
     display: flex;
     padding:5px;
     justify-content: space-around;
@@ -81,10 +92,12 @@ body{
 }
 
 .the-main-part{
-    margin:10px;
-    padding:20px;
-    height: 85vh;
-    width:80vw;
+    margin:auto;
+    padding:0;
+    height: 100%;
+    width: 80%;
+    overflow: auto;
+    box-sizing:border-box;
 }
 
 .everything{
@@ -93,7 +106,9 @@ body{
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    padding:40px; 
+    padding:20px; 
+    box-sizing: border-box;
+    margin:0;
 }
 /*
 html{
